--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app_name",
+  "name": "spider_cook",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -13,7 +13,7 @@
     "serve-favicon": "~2.1.3",
     "debug": "~2.0.0",
     "mongoskin": "*",
-    "fs": "*",
-    "ejs": "*"
+    "ejs": "*",
+    "async": "*"
   }
 }
